force-app/main/default/objects/Policy_AOP__c/Policy_AOP__c.object-meta.xml
<CustomObject>
    <label>Area of Practice</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Area of Practice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Area of Practice</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>