force-app/main/default/objects/Policy_AOP__c/fields/Allocation_Original_Premium__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Original_Premium__c</fullName>
    <description>Allocation of Original Policy Premium</description>
    <formula>Policy__r.Original_Premium__c  * Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation (Original Premium)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>