force-app/main/default/objects/Policy_AOP__c/fields/AOP__c.field-meta.xml
<CustomField>
    <fullName>AOP__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AOP</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <filterItems>
            <field>AOP_Factor__c.Master_Factor__r.Default__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.Bypass_Default_Factor__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$Source.Bypass_Default_Factor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AOP_Factor__c</referenceTo>
    <relationshipLabel>Area of Practice (AOP)</relationshipLabel>
    <relationshipName>Area_of_Practice1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>