force-app/main/default/objects/Policy_AOP__c/fields/App_AOP_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>App_AOP_Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>App_AOP Unique Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>