force-app/main/default/objects/Policy_AOP__c/fields/Bypass_Default_Factor__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Default_Factor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Default Factor</label>
    <type>Checkbox</type>
</CustomField>