force-app/main/default/objects/Policy_AOP__c/fields/Factor_Mod__c.field-meta.xml
<CustomField>
    <fullName>Factor_Mod__c</fullName>
    <label>Factor Mod</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>