force-app/main/default/objects/Policy_AOP__c/fields/Online_NBA__c.field-meta.xml
<CustomField>
    <fullName>Online_NBA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online NBA</label>
    <referenceTo>Customer_Application__c</referenceTo>
    <relationshipLabel>Area of Practice</relationshipLabel>
    <relationshipName>Area_of_Practice</relationshipName>
    <type>Lookup</type>
</CustomField>