force-app/main/default/objects/Policy_AOP__c/fields/Percentage_Value__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Value__c</fullName>
    <label>Percentage Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>