force-app/main/default/objects/Policy_AOP__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Application</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Area of Practice</relationshipLabel>
    <relationshipName>Policy_AOPs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>