force-app/main/default/objects/Policy_AOP__c/fields/Policy_AOP_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Policy_AOP_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Policy AOP External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>