force-app/main/default/objects/Policy_AOP__c/fields/Premium_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Premium_Allocation__c</fullName>
    <formula>Policy__r.Premium__c  *   Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation (Total Premium)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>