force-app/main/default/objects/Policy_AOP__c/validationRules/Percentage_should_be_between_1_to_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Percentage_should_be_between_1_to_100</fullName>
    <active>true</active>
    <description>AOP Percentage should always be between 1-100.</description>
    <errorConditionFormula>Percentage__c &lt;=0 ||
Percentage__c &gt;1</errorConditionFormula>
    <errorDisplayField>Percentage__c</errorDisplayField>
    <errorMessage>Percentage should be between 1 to 100</errorMessage>
</ValidationRule>